k8s/bunetz/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bunetz
  namespace: bunetz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bunetz
  template:
    metadata:
      labels:
        app: bunetz
    spec:
      containers:
      - name: bunetz
        image: bunetz/bunetz:0.0.10
        imagePullPolicy: IfNotPresent
        ports:
          - name: http-port
            containerPort: 8080
        resources:
          requests:
            memory: 128Mi
            cpu: 50m
          limits:
            memory: 256Mi
            cpu: 300m
