k8s/bunetz/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bunetz
  namespace: bunetz
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: bunetz
